--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -8,6 +8,9 @@ on:
 
 jobs:
   build:
+    strategy:
+      matrix:
+        influxdb: [1.6.5, 1.7.3]
 
     runs-on: ubuntu-latest
 
@@ -19,5 +22,7 @@ jobs:
         java-version: 1.8
     - name: Run unit tests
       run: sbt test
-    - name: Run integration tests
+    - name: Run integration test on InfluxDB: ${{ martix.influxdb }}
+      env:
+        INFLUXDB_VERSION: ${{ martix.influxdb }}
       run: sbt it:test
