--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -10,7 +10,7 @@ jobs:
   build:
     strategy:
       matrix:
-        influxdb: [1.6.5, 1.7.3]
+        influxdb: [1.7.3, 1.8.10]
 
     runs-on: ubuntu-latest
 
@@ -20,6 +20,8 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 1.8
+    - name: Check formatting with Scalafmt
+      run: sbt scalafmtCheck
     - name: Run unit tests
       run: sbt test
     - name: Run integration test on InfluxDB - ${{ matrix.influxdb }}
